# paper2sw

./: LICENSE  README.md  mkdocs.yml  output_real_paper.jsonl  pyproject.toml  sw.jsonl
.github/workflows/: docs.yml
docs/: cli.md  configuration.md  contributing.md  features.md  index.md  python-api.md  quickstart.md
docs/javascripts/: extra.js
examples/: batch_quickstart.py  dummy_paper.txt  quickstart.py
paper2sw/: README.md  __init__.py  api.py  cli.py  config.py  io_utils.py  model.py  predictor.py  pyproject.toml  sw.jsonl  sw_new.jsonl  types.py
paper2sw/src/paper2sw/: TUI_README.md  __init__.py  api.py  cache.py  cli.py  custom_types.py  evaluator.py  file_browser.py  io_utils.py  logging_config.py  model.py  predictor.py  selector.py  semantic_analyzer.py  settings.py  tui.py  tui.tcss  types.py
paper2sw/src/paper2sw_uv_temporary/: __init__.py
paper2sw_uv_temporary/: README.md  pyproject.toml
paper2sw_uv_temporary/src/paper2sw/: api.py  config.py
site/: 404.html  index.html  sitemap.xml
site/cli/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/features/: index.html
site/python-api/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_evaluator.py  test_io_utils.py  test_model.py  test_predictor.py  test_selector.py  test_semantic_analyzer.py  test_types.py
