[project]
name = "paper2sw"
version = "0.1.0"
description = "Paper2SW-Diff: Predict super-weights directly from technical papers"
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "pypdf>=4.0.0",
]

[project.scripts]
paper2sw = "paper2sw.cli:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
