[project]
name = "paper2sw"
version = "0.1.0"
description = "Paper2SW-Diff: Predict super-weights directly from technical papers"
readme = "README.md"
authors = [
    { name = "Ash Blanc", email = "ash.blanc@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0; extra == 'yaml'",
    "textual>=0.70.0",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
tui = [
    "textual>=0.70.0",
]

[project.scripts]
paper2sw = "paper2sw.cli:main"

[project.entry-points."paper2sw.backends"]
semantic = "paper2sw.model:SemanticDiffusionModel"

[tool pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"